added handler for images to print/save/delete
